# CALO-RPD

./: .gitignore  AUDIT_REPORT.md  CALO-RPD-v5.6.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v5.7.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v5.7.0_SECTION2_CLOSURE_SUMMARY.txt  CALO-RPD-v5.8.0_AUDIT_CLOSURE_SUMMARY.txt  CALO-RPD-v5.8.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v5.9.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v5.9.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.0.0a4_ALPHA_AUDIT.txt  CALO-RPD-v6.0.0a4_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.1.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.1.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.2.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.2.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.2.1_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.2.1_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.3.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.3.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.4.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.4.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.5.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.5.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.6.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.6.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.7.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.7.0_IMPLEMENTATION_REPORT.md  CALO-RPD-v6.8.0_DEEP_POST_GENERATION_AUDIT.txt  CALO-RPD-v6.8.0_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CITATION.cff  FINDINGS_CLOSURE_v3.4.0.csv  FINDINGS_CLOSURE_v3.4.1.csv  FINDINGS_CLOSURE_v3.4.2.csv  FINDINGS_CLOSURE_v3.4.3.csv  FINDINGS_CLOSURE_v4.0.0.csv  FINDINGS_CLOSURE_v4.1.0.csv  FINDINGS_CLOSURE_v5.0.0.csv  FINDINGS_CLOSURE_v5.4.1.csv  FINDINGS_CLOSURE_v5.6.0.csv  (+54 more)
calo_bootstrap/: __init__.py  launcher.py  prerequisites.py  wizard.py
calo_rpd_studio/: __init__.py  version.py
docs/: API_COMPATIBILITY_V57.md  API_COMPATIBILITY_V58.md  ARCHITECTURE_BOUNDARIES_V57.md  ARCHITECTURE_BOUNDARIES_V58.md  CALO_V41_IMPLEMENTATION_REPORT.md  CALO_V4_IMPLEMENTATION_REPORT.md  CALO_V56_COMPETITIVE_POLICY_TRAINING.md  CALO_V57_SCIENTIFIC_AUDIT_CLOSURE.md  CALO_V58_COMPETITIVE_TRAINING_CLOSURE.md  CALO_V5_IMPLEMENTATION_REPORT.md  (+11 more)
(+375 files in other folders)
