[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calo-rpd-studio"
version = "6.8.0"
description = "Cognitive Adaptive Learning Optimizer for robust reactive power dispatch"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "CALO-RPD Studio contributors"}]
dependencies = [
  "numpy>=1.26,<2.4",
  "scipy>=1.12,<2",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "PyQt6>=6.6,<7",
  "PYPOWER>=5.1.18,<6",
  "PyYAML>=6,<7",
  "psutil>=5.9,<8",
  "nvidia-ml-py>=13,<14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-qt>=4.4,<5",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "black>=24,<26",
  "mypy>=1.13,<2",
  "build>=1.2,<2",
]

[project.scripts]
calo-rpd-studio = "calo_bootstrap.launcher:main"
calo-rpd-benchmark = "calo_rpd_studio.scripts.run_benchmark:main"
calo-rpd-final-benchmark = "calo_rpd_studio.scripts.run_final_benchmark:main"
calo-rpd-train = "calo_rpd_studio.scripts.train_calo:main"
calo-rpd-validate = "calo_rpd_studio.scripts.validate_cases:main"
calo-rpd-parity = "calo_rpd_studio.scripts.validate_accelerator:main"
calo-rpd-stage-b-validate = "calo_rpd_studio.scripts.validate_stage_b_synthetic:main"
calo-rpd-export = "calo_rpd_studio.scripts.export_publication_results:main"

[tool.setuptools.packages.find]
include = ["calo_rpd_studio*", "calo_bootstrap*"]

[tool.setuptools.package-data]
calo_rpd_studio = [
  "data/trained_models/*.pt",
  "data/trained_models/*.json",
  "data/examples/*.yaml",
  "data/schemas/*.json",
  "data/frozen/*.json",
  "gui/resources/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E401", "E741", "F403", "F405"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
